# daily_learning_notes

./: README.md  pyproject.toml
Learning/: Learning Eigen Decomposition to Singular Vector Decomposition.md  Learning Entropy and MLE review.md  Learning Lora.md  Learning Loss Function in Classification.md  Learning XGBoost Review.md
daily_learning_notes/: EM_algo.ipynb  baye_theorem.ipynb  learning_lock.ipynb  lora_svd_basics.ipynb  mse_crossentropy.ipynb  probabil_vs_likelihood.ipynb  sigmoid_review.ipynb  svd_linear_algebra.ipynb  xgboost_simulation.ipynb
